--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ajaybiswasdev.github.io/gradevideo",
   "name": "front",
   "version": "0.1.0",
   "private": true,
@@ -57,6 +58,8 @@
     "video-react": "^0.14.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start --open",
     "build": "react-scripts build",
     "test": "react-scripts test",
